Bug 1555798 - Use a scalar name copy instead of a &BaseScalarInfo r=Dexter a=jcristau

References to ScalarInfo objects are stable for all scalars registered
at compile-time, but not for those registered at runtime.

Differential Revision: https://phabricator.services.mozilla.com/D33274

--HG--
extra : source : e4c9890a1f35d421b9f7a42b064d3d8df1a8c152